h1 wrap+align fix

--- a/style.css
+++ b/style.css
@@ -123,6 +123,8 @@ textarea {
 @media screen and (max-width: 400px) {
   h1 {
     font-size: 16px;
+    word-wrap: normal;
+    text-align: center;
   }
 
   /* h3 {
